# cdc_dlt_extract

./: .gitignore  pyproject.toml
src/cdc_dlt_extract/: cdc_data_pipeline.py
