[project]
name = "cdc-dlt-extract"
version = "0.0.1"
authors = [{ name = "mvcostanzo@gmail.com" }]
requires-python = ">= 3.11"
dependencies = [
    "dlt[filesystem,parquet]>=1.15.0",
    "enlighten>=1.14.1",
    "s3fs>=2025.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_dlt_extract"]

[project.scripts]
main = "cdc_dlt_extract.cdc_data_pipeline:main"
